--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "passport-twitter-oauth2": "^2.1.1",
     "request": "^2.88.2"
   }
 }
