--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --exec babel-node server.js",
     "build": "babel server.js -d dist",
-    "start": "nodemon --exec babel-node server.js",
+    "start": "babel-node server.js",
     "lint": "eslint ./",
     "lint:fix": "eslint ./ --fix"
   },
